# plasma-emergelog

./: AUTHORS  CMakeLists.txt  CONTRIBUTORS  INSTALL  README  plasma-applet-emergelog.desktop  plasma-emergelog-painter.cpp  plasma-emergelog-painter.h  plasma-emergelog.cpp  plasma-emergelog.h
